# featuretools-tsfresh-primitives

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.md  dev-requirements.txt  pyproject.toml  readme.md  release.md  requirements.txt  setup.cfg  setup.py  test-requirements.txt  upload.sh
.circleci/: config.yml
.github/circleci-scheduler/: Dockerfile  README.md  action.yml  main.sh
.github/workflows/: circleci-scheduler.yml  entry_point_tests.yml  lint_check.yml  my_script.py  release.yml  schedule.yml  scheduler.yml  test_latest_repo_change.yml  tests.yml  unit_tests_with_latest_deps.yml
.github/workflows/scripts/: main.sh
featuretools_tsfresh_primitives/: __init__.py  abs_energy.py  absolute_sum_of_changes.py  agg_autocorrelation.py  agg_linear_trend.py  approximate_entropy.py  ar_coefficient.py  augmented_dickey_fuller.py  autocorrelation.py  binned_entropy.py  c3.py  change_quantiles.py  cid_ce.py  count_above_mean.py  count_below_mean.py  cwt_coefficients.py  energy_ratio_by_chunks.py  fft_aggregated.py  fft_coefficient.py  first_location_of_maximum.py  first_location_of_minimum.py  friedrich_coefficients.py  has_duplicate.py  has_duplicate_max.py  has_duplicate_min.py  index_mass_quantile.py  kurtosis.py  large_standard_deviation.py  last_location_of_maximum.py  last_location_of_minimum.py  length.py  linear_trend.py  longest_strike_above_mean.py  longest_strike_below_mean.py  max_langevin_fixed_point.py  maximum.py  mean.py  mean_abs_change.py  mean_change.py  mean_second_derivative_central.py  (+27 more)
featuretools_tsfresh_primitives/primitives/: __init__.py  abs_energy.py  absolute_sum_of_changes.py  agg_autocorrelation.py  agg_linear_trend.py  approximate_entropy.py  ar_coefficient.py  augmented_dickey_fuller.py  autocorrelation.py  binned_entropy.py  c3.py  change_quantiles.py  cid_ce.py  count_above.py  count_above_mean.py  count_below.py  count_below_mean.py  cwt_coefficients.py  energy_ratio_by_chunks.py  fft_aggregated.py  fft_coefficient.py  first_location_of_maximum.py  first_location_of_minimum.py  friedrich_coefficients.py  has_duplicate.py  has_duplicate_max.py  has_duplicate_min.py  index_mass_quantile.py  kurtosis.py  large_standard_deviation.py  last_location_of_maximum.py  last_location_of_minimum.py  length.py  linear_trend.py  linear_trend_timewise.py  longest_strike_above_mean.py  longest_strike_below_mean.py  max_langevin_fixed_point.py  maximum.py  mean.py  (+27 more)
featuretools_tsfresh_primitives/tests/: test_primitives.py  test_short_term_fourier_primitives.py  test_utils.py  test_version.py
