[tool:pytest]
addopts = --doctest-modules
python_files = featuretools_tsfresh_primitives/tests/*
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning
[flake8]
max-line-length = 88
extend-ignore = E203
exclude = docs/*
ignore = E501,W504,W503
per-file-ignores =
    **/__init__.py:F401
    **/tests/*:D
[metadata]
description-file = README.md
[aliases]
test=pytest
[isort]
profile=black
forced_separate=featuretools_tsfresh_primitives
multi_line_output=3
known_first_party=featuretools_tsfresh_primitives
skip=__init__.py