[metadata]
name = featuretools_tsfresh_primitives
version = attr: featuretools_tsfresh_primitives.version.__version__
url = https://github.com/alteryx/featuretools_tsfresh_primitives
download_url = https://pypi.org/project/featuretools_tsfresh_primitives/
project_urls =
    Source Code = https://github.com/alteryx/featuretools_tsfresh_primitives/
    Issue Tracker = https://github.com/alteryx/featuretools_tsfresh_primitives/issues
    Twitter = https://twitter.com/alteryxoss
    Chat = https://join.slack.com/t/alteryx-oss/shared_invite/zt-182tyvuxv-NzIn6eiCEf8TBziuKp0bNA
author = Alteryx, Inc.
author_email = open_source_support@alteryx.com
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Topic :: Software Development
    Topic :: Scientific/Engineering
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
license = MIT
license_files =
    LICENSE
description = TSFresh primitives for featuretools
long_description = file: README.md
long_description_content_type = text/markdown
keywords = feature engineering, data, science, machine learning
platforms = any

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires =
    tsfresh >= 0.19.0
    pandas >= 1.3.0
    featuretools >= 1.0.0
python_requires = >=3.8, <4

[options.extras_require]
dev =
    flake8 == 4.0.1
    isort == 5.9.3
    black == 22.3.0
    pre-commit >= 2.20.0
    %(test)s
test =
    pytest >= 4.4.2
    pytest-cov >= 2.6.1

[options.package_data]
* =
    *.txt
    LICENSE
    README.md

[options.exclude_package_data]
* =
    * __pycache__
    *.py[co]

[options.entry_points]
featuretools_plugin:
    tsfresh = featuretools_tsfresh_primitives.__init__

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = docs/*
ignore = E501,W504,W503 # line too long error, line break after and before binary operator
per-file-ignores =
    **/__init__.py:F401
    **/tests/*:D
